# src/swagger.json
@@ -2283,7 +2283,7 @@
         }
       }
     },
-    "/akatApi/setting/getAllDataHolidays": {
+    "/akatApi/setting/getHolidays": {
       "get": {
         "tags": [
           "Holiday"
@@ -2436,13 +2436,13 @@
         }
       }
     },
-    "/akatApi/setting/insertDataHoliday": {
+    "/akatApi/setting/syncHolidays": {
       "post": {
         "tags": [
           "Holiday"
         ],
-        "summary": "สำหรับบันทึกข้อมูล Holiday",
-        "description": "สำหรับบันทึกข้อมูลทั้งหมดของ Holiday และตรวจสอบ Token เพื่อยืนยันตัวตน โดย Token ส่งผ่าน Header",
+        "summary": "สำหรับดึงข้อมูล Holiday",
+        "description": "สำหรับดึงข้อมูลทั้งหมดของ Holiday และตรวจสอบ Token เพื่อยืนยันตัวตน โดย Token ส่งผ่าน Header",
         "parameters": [
           {
             "name": "Authorization",
@@ -2455,40 +2455,6 @@
             "description": "Token จากการล็อกอิน ส่งในรูปแบบ Bearer Token"
           }
         ],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "holiday_name": {
-                    "type": "string",
-                    "example": "วันหยุดชดเชยวันจักรี"
-                  },
-                  "holiday_date": {
-                    "type": "string",
-                    "example": "2025-04-07"
-                  },
-                  "created_by": {
-                    "type": "string",
-                    "example": "admin"
-                  },
-                  "updated_by": {
-                    "type": "string",
-                    "example": "admin"
-                  }
-                },
-                "required": [
-                  "holiday_name",
-                  "holiday_date",
-                  "created_by",
-                  "updated_by"
-                ]
-              }
-            }
-          }
-        },
         "responses": {
           "200": {
             "description": "ความสำเร็จทั่วไป",
@@ -2497,312 +2463,21 @@
                 "schema": {
                   "type": "object",
                   "properties": {
-                    "message": {
-                      "type": "string",
-                      "example": "Insert data successfully!"
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "ข้อมูลจาก Client ไม่ถูกต้อง",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "message": {
-                      "type": "string",
-                      "example": "การเข้าถึงถูกปฏิเสธ! || กรุณากรอกข้อมูลให้ครบถ้วน || รูปแบบวันที่ไม่ถูกต้อง! กรุณาใช้รูปแบบ YYYY-MM-DD! || วันที่ไม่ถูกต้อง! กรุณาตรวจสอบวันที่!"
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "401": {
-            "description": "การรับรองความถูกต้องล้มเหลว",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "message": {
-                      "type": "string",
-                      "example": "TokenExpiredError! || JsonWebTokenError! || Token ไม่ถูกต้อง! || Tokenไม่อนุญาติให้ใช้งาน! || ไม่มีการยืนยันตัวตนด้วย OTP กรุณายืนยันตัวตนก่อนใช้งานระบบ!"
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "403": {
-            "description": "Server ปฏิเสธการร้องขอ",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "message": {
-                      "type": "string",
-                      "example": "ไม่มีสิทธิ์การใช้งานในส่วนของระบบนี้!"
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "409": {
-            "description": "คำร้องขอไม่สามารถดำเนินการได้เนื่องจากขัดแย้งกับสถานะปัจจุบันของทรัพยากรที่ต้องการอัพเดท",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "message": {
-                      "type": "string",
-                      "example": "มี (holiday_name) อยู่ในระบบแล้ว ไม่อนุญาตให้บันทึกข้อมูลซ้ำ!"
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "ข้อผิดพลาดเซิร์ฟเวอร์",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "message": {
-                      "type": "string",
-                      "example": "internal server errors"
-                    }
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/akatApi/setting/updateDataHoliday/{id}": {
-      "put": {
-        "tags": [
-          "Holiday"
-        ],
-        "summary": "สำหรับอัพเดทข้อมูล Holiday",
-        "description": "สำหรับอัพเดทข้อมูลทั้งหมดของ Holiday และตรวจสอบ Token เพื่อยืนยันตัวตน โดย Token ส่งผ่าน Header",
-        "parameters": [
-          {
-            "name": "Authorization",
-            "in": "header",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "example": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
-            },
-            "description": "Token จากการล็อกอิน ส่งในรูปแบบ Bearer Token"
-          },
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "integer",
-              "example": 1
-            },
-            "description": "ID ของ Holiday ที่ต้องการอัพเดท"
-          }
-        ],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "holiday_name": {
-                    "type": "string",
-                    "example": "วันสงกรานต์"
-                  },
-                  "holiday_date": {
-                    "type": "string",
-                    "example": "2025-04-14"
-                  },
-                  "updated_by": {
-                    "type": "string",
-                    "example": "admin"
-                  }
-                },
-                "required": [
-                  "holiday_name",
-                  "holiday_date",
-                  "updated_by"
-                ]
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "ความสำเร็จทั่วไป",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "message": {
-                      "type": "string",
-                      "example": "Updated successfully!"
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "ข้อมูลจาก Client ไม่ถูกต้อง",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "message": {
-                      "type": "string",
-                      "example": "การเข้าถึงถูกปฏิเสธ! || กรุณากรอกข้อมูลให้ครบถ้วน || รูปแบบวันที่ไม่ถูกต้อง! กรุณาใช้รูปแบบ YYYY-MM-DD! || วันที่ไม่ถูกต้อง! กรุณาตรวจสอบวันที่!"
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "401": {
-            "description": "การรับรองความถูกต้องล้มเหลว",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "message": {
-                      "type": "string",
-                      "example": "TokenExpiredError! || JsonWebTokenError! || Token ไม่ถูกต้อง! || Tokenไม่อนุญาติให้ใช้งาน! || ไม่มีการยืนยันตัวตนด้วย OTP กรุณายืนยันตัวตนก่อนใช้งานระบบ!"
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "403": {
-            "description": "Server ปฏิเสธการร้องขอ",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "message": {
-                      "type": "string",
-                      "example": "ไม่มีสิทธิ์การใช้งานในส่วนของระบบนี้!"
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "404": {
-            "description": "Resource ไม่พบ( Not found )",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "message": {
-                      "type": "string",
-                      "example": "ไม่มี holiday_id อยู่ในระบบ!"
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "409": {
-            "description": "คำร้องขอไม่สามารถดำเนินการได้เนื่องจากขัดแย้งกับสถานะปัจจุบันของทรัพยากรที่ต้องการอัพเดท",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "message": {
-                      "type": "string",
-                      "example": "มี (holiday_name) อยู่ในระบบแล้ว ไม่อนุญาตให้บันทึกข้อมูลซ้ำ!"
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "ข้อผิดพลาดเซิร์ฟเวอร์",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "message": {
-                      "type": "string",
-                      "example": "internal server errors"
-                    }
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/akatApi/setting/removeHoliday/{id}": {
-      "delete": {
-        "tags": [
-          "Holiday"
-        ],
-        "summary": "สำหรับลบข้อมูล Holiday",
-        "description": "สำหรับลบข้อมูลทั้งหมดของ Holiday และตรวจสอบ Token เพื่อยืนยันตัวตน โดย Token ส่งผ่าน Header",
-        "parameters": [
-          {
-            "name": "Authorization",
-            "in": "header",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "example": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
-            },
-            "description": "Token จากการล็อกอิน ส่งในรูปแบบ Bearer Token"
-          },
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "integer",
-              "example": 1
-            },
-            "description": "ID ของ Holiday ที่ต้องการอัพเดท"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "ความสำเร็จทั่วไป",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "message": {
-                      "type": "string",
-                      "example": "Deleted successfully!"
+                    "data": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "progress": {
+                            "type": "integer",
+                            "example": "1/125 || complete"
+                          },
+                          "message": {
+                            "type": "string",
+                            "example": "Sync data successfully!"
+                          }
+                        }
+                      }
                     }
                   }
                 }
@@ -2866,7 +2541,7 @@
                   "properties": {
                     "message": {
                       "type": "string",
-                      "example": "ไม่มี holiday_id อยู่ในระบบ!"
+                      "example": "ไม่พบข้อมูลวันหยุดจากระบบ HoSXP!"
                     }
                   }
                 }
@@ -2892,7 +2567,7 @@
         }
       }
     },
-    "/akatApi/setting/getAllDataShiftTypes": {
+    "/akatApi/setting/getShiftTypes": {
       "get": {
         "tags": [
           "ShiftType"
@@ -3041,7 +2716,7 @@
         }
       }
     },
-    "/akatApi/setting/insertDataShiftType": {
+    "/akatApi/setting/insertShiftType": {
       "post": {
         "tags": [
           "ShiftType"
@@ -3189,7 +2864,7 @@
         }
       }
     },
-    "/akatApi/setting/updateDataShiftType/{id}": {
+    "/akatApi/setting/updateShiftType/{id}": {
       "put": {
         "tags": [
           "ShiftType"
@@ -3487,7 +3162,7 @@
         }
       }
     },
-    "/akatApi/setting/getAllDataShifts": {
+    "/akatApi/setting/getAllShifts": {
       "get": {
         "tags": [
           "Shift"
@@ -3644,7 +3319,7 @@
         }
       }
     },
-    "/akatApi/setting/insertDataShift": {
+    "/akatApi/setting/insertShift": {
       "post": {
         "tags": [
           "Shift"
@@ -3802,7 +3477,7 @@
         }
       }
     },
-    "/akatApi/setting/updateDataShift/{id}": {
+    "/akatApi/setting/updateShift/{id}": {
       "put": {
         "tags": [
           "Shift"
